maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: recursive method chercheEcrit needs result type
		chercheEcrit(f,g-1)
                ^